Unification des styles de groupes entre boutons radio et cases a cocher

--- a/public/index.html
+++ b/public/index.html
@@ -1696,10 +1696,10 @@
             <qc-doc-exemple caption="Exemple d'un groupe de cases avec une option obligatoire">
                 <qc-checkbox-group
                         legend="Sélectionnez vos options"
-                    name="options"
+                        name="options"
                         required="true"
                         invalid="true"
-                        error-text="Veuillez sélectionner au moins une option">
+                        invalid-text="Veuillez sélectionner au moins une option">
                     <qc-checkbox label="Option 1"></qc-checkbox>
                     <qc-checkbox label="Option 2"></qc-checkbox>
                     <qc-checkbox label="Option 3"></qc-checkbox>
@@ -1770,7 +1770,7 @@
                             <td>Indique si la case est invalide.  La case à cocher devient invalide si on tente de soumettre la case non cochée alors qu'elle est obligatoire.</td>
                         </tr>
                         <tr>
-                            <td>error-text</td>
+                            <td>invalid-text</td>
                             <td>Texte</td>
                             <td>"Champ obligatoire" ou "Required field"</td>
                             <td>Message d'erreur à afficher lorsque la case est invalide</td>
@@ -1823,7 +1823,7 @@
                             <td>Indique si le groupe est invalide.  Le groupe devient invalide si on tente de soumettre le groupe avec aucune case cochée alors qu'il est obligatoire.</td>
                         </tr>
                         <tr>
-                            <td>error-text</td>
+                            <td>invalid-text</td>
                             <td>Texte</td>
                             <td>"Champ obligatoire" ou "Required field"</td>
                             <td>Message d'erreur à afficher lorsque le groupe est invalide</td>
