Correction d'affichage des spans de requis et d'erreurs

--- a/public/index.html
+++ b/public/index.html
@@ -1419,16 +1419,16 @@
                 <qc-radio-group id="exemple-radio-md" legend="Choisissez une option :" name="ex-md" size="md">
                     <qc-radio-button
                             label="Option 1"
-                            value="1"
+                            value="undefined"
                             checked
                     ></qc-radio-button>
                     <qc-radio-button
                             label="Option 2"
-                            value="2"
+                            value="null"
                     ></qc-radio-button>
                     <qc-radio-button
                             label="Option 3 (désactivée)"
-                            value="3"
+                            value="null"
                             disabled
                     ></qc-radio-button>
                 </qc-radio-group>
