Rajout de la documentation de 'checkbox-*' apres cherry pick

--- a/public/index.html
+++ b/public/index.html
@@ -1937,6 +1937,16 @@
                                 comme attribut à la case à cocher.
                             </td>
                         </tr>
+                        <tr>
+                            <td>checkbox-*</td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                Tout attribut commençant par <code class="qc-bg-color-grey-pale">checkbox-</code> sera ajouté
+                                comme attribut à la case à cocher brute. Utile pour ajouter de la validation de formulaire par
+                                contraintes HTML.
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
