--- a/public/index.html
+++ b/public/index.html
@@ -1916,6 +1916,16 @@
                             <td>"Champ obligatoire" ou "Required field"</td>
                             <td>Message d'erreur à afficher lorsque le groupe est invalide</td>
                         </tr>
+                        <tr>
+                            <td>checkbox-*</td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                Tout attribut commençant par <code class="qc-bg-color-grey-pale">checkbox-</code> sera ajouté
+                                comme attribut à la case à cocher brute. Utile pour ajouter de la validation de formulaire par
+                                contraintes HTML.
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
