Ajout de documentation de selectionButton pour qc-checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -1920,6 +1920,16 @@
                             <td>Affiche les boutons radios au format compact</td>
                         </tr>
                         <tr>
+                            <td>selection-button</td>
+                            <td>"true" ou "false"</td>
+                            <td>"false"</td>
+                            <td>
+                                Affiche les boutons radios au format de bouton de sélection. Mis à "true" si le
+                                <code class="qc-bg-color-grey-pale">qc-checkbox-group</code> parent a son attribut
+                                <code class="qc-bg-color-grey-pale">grid</code> à "true".
+                            </td>
+                        </tr>
+                        <tr>
                             <td>required</td>
                             <td>na</td>
                             <td>na</td>
