--- a/public/index.html
+++ b/public/index.html
@@ -1467,7 +1467,7 @@
             <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
                 <qc-radio-group legend="Choisissez une option :"
                                 name="ex-radio-select"
-                                grid
+                                selection-button
                                 elements-per-row-or-col="2"
                 >
                     <qc-radio-button
@@ -1627,7 +1627,7 @@
                         <td>Texte qui s'affiche sous les boutons radio en cas d’état invalide</td>
                     </tr>
                     <tr>
-                        <td>grid</td>
+                        <td>selection-button</td>
                         <td>"true" ou "false"</td>
                         <td>"false"</td>
                         <td>Affiche les boutons radio en boutons de sélection dans une grille</td>
@@ -1792,7 +1792,7 @@
                 <qc-checkbox-group
                     name="exemple-checkbox-select"
                     legend="Sélectionnez vos options"
-                    grid
+                    selection-button
                     elements-per-row-or-col="2">
                     <qc-checkbox
                             label="Option 1"
@@ -1926,7 +1926,7 @@
                             <td>
                                 Affiche les boutons radios au format de bouton de sélection. Mis à "true" si le
                                 <code class="qc-bg-color-grey-pale">qc-checkbox-group</code> parent a son attribut
-                                <code class="qc-bg-color-grey-pale">grid</code> à "true".
+                                <code class="qc-bg-color-grey-pale">selection-button</code> à "true".
                             </td>
                         </tr>
                         <tr>
@@ -2027,7 +2027,7 @@
                             <td>Message d’erreur à afficher lorsque le groupe est invalide</td>
                         </tr>
                         <tr>
-                            <td>grid</td>
+                            <td>selection-button</td>
                             <td>"true" ou "false"</td>
                             <td>"false"</td>
                             <td>Affiche les cases à cocher en boutons de sélection dans une grille</td>
