Ajout de texte en gras dans la description de boutons de selection

--- a/public/index.html
+++ b/public/index.html
@@ -1474,7 +1474,7 @@
                             label="Option 1"
                             value="1"
                             checked
-                            description="Ceci est une longue description servant à montrer l'affichage des boutons de sélection."
+                            description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
                     ></qc-radio-button>
                     <qc-radio-button
                             label="Option 2"
@@ -1628,8 +1628,8 @@
                     </tr>
                     <tr>
                         <td>selection-button</td>
-                        <td>"true" ou "false"</td>
-                        <td>"false"</td>
+                        <td>NA</td>
+                        <td>NA</td>
                         <td>Affiche les boutons radio en boutons de sélection dans une grille</td>
                     </tr>
                     <tr>
@@ -1796,7 +1796,7 @@
                     elements-per-row-or-col="2">
                     <qc-checkbox
                             label="Option 1"
-                            description="Ceci est une longue description servant à montrer l'affichage des boutons de sélection."
+                            description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
                     ></qc-checkbox>
                     <qc-checkbox label="Option 2 cochée par défaut" checked="true"></qc-checkbox>
                     <qc-checkbox label="Option 3 désactivée" disabled="true"></qc-checkbox>
@@ -1921,12 +1921,11 @@
                         </tr>
                         <tr>
                             <td>selection-button</td>
-                            <td>"true" ou "false"</td>
-                            <td>"false"</td>
+                            <td>NA</td>
+                            <td>NA</td>
                             <td>
-                                Affiche les boutons radios au format de bouton de sélection. Mis à "true" si le
-                                <code class="qc-bg-color-grey-pale">qc-checkbox-group</code> parent a son attribut
-                                <code class="qc-bg-color-grey-pale">selection-button</code> à "true".
+                                Affiche les cases à cocher au format de bouton de sélection. Valeur héritée du
+                                <code class="qc-bg-color-grey-pale">qc-checkbox-group</code> parent si présent.
                             </td>
                         </tr>
                         <tr>
@@ -2028,8 +2027,8 @@
                         </tr>
                         <tr>
                             <td>selection-button</td>
-                            <td>"true" ou "false"</td>
-                            <td>"false"</td>
+                            <td>NA</td>
+                            <td>NA</td>
                             <td>Affiche les cases à cocher en boutons de sélection dans une grille</td>
                         </tr>
                         <tr>
