Renommage des attributs de boutons de selection

--- a/public/index.html
+++ b/public/index.html
@@ -1467,8 +1467,8 @@
             <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
                 <qc-radio-group legend="Choisissez une option :"
                                 name="ex-radio-select"
-                                selection-button
-                                elements-per-row-or-col="2"
+                                tiled
+                                column-count="2"
                 >
                     <qc-radio-button
                             label="Option 1"
@@ -1627,7 +1627,7 @@
                         <td>Texte qui s'affiche sous les boutons radio en cas d’état invalide</td>
                     </tr>
                     <tr>
-                        <td>selection-button</td>
+                        <td>tiled</td>
                         <td>NA</td>
                         <td>NA</td>
                         <td>Affiche les boutons radio en boutons de sélection dans une grille</td>
@@ -1642,7 +1642,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>elements-per-row-or-col</td>
+                        <td>column-count</td>
                         <td>Nombre</td>
                         <td>1</td>
                         <td>
@@ -1792,8 +1792,8 @@
                 <qc-checkbox-group
                     name="exemple-checkbox-select"
                     legend="Sélectionnez vos options"
-                    selection-button
-                    elements-per-row-or-col="2">
+                    tiled
+                    column-count="2">
                     <qc-checkbox
                             label="Option 1"
                             description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
@@ -1920,7 +1920,7 @@
                             <td>Affiche les boutons radios au format compact</td>
                         </tr>
                         <tr>
-                            <td>selection-button</td>
+                            <td>tiled</td>
                             <td>NA</td>
                             <td>NA</td>
                             <td>
@@ -2026,7 +2026,7 @@
                             <td>Message d’erreur à afficher lorsque le groupe est invalide</td>
                         </tr>
                         <tr>
-                            <td>selection-button</td>
+                            <td>tiled</td>
                             <td>NA</td>
                             <td>NA</td>
                             <td>Affiche les cases à cocher en boutons de sélection dans une grille</td>
@@ -2041,7 +2041,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>elements-per-row-or-col</td>
+                            <td>column-count</td>
                             <td>Nombre</td>
                             <td>1</td>
                             <td>
