Utils.js  - modification de la fonction computeFieldsAttributes et ajustemnts

--- a/public/index.html
+++ b/public/index.html
@@ -1451,6 +1451,7 @@
                                 compact >
                     <qc-radio-button
                             label="Option 1"
+                            radio-foo="foo"
                             value="1"
                             checked
                     ></qc-radio-button>
